# atoma-experiments

./: .gitignore  README.md
rag/: .env.example  Cargo.toml  README.md  deploy.dockerfile
rag-experiments/: Cargo.toml
rag-experiments/src/: client.rs  main.rs  server.rs  types.rs
rag/src/: client.rs  corpus.rs  lib.rs  main.rs  server.rs  split_criteria.rs  types.rs
x/: .env.example  Cargo.toml
x/src/: lib.rs  main.rs  note_tweet.rs  parser.rs  tweets.rs
