[package]
name = "rag"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.88"
axum = { version = "0.7.5", features = ["json"] }
axum-server = "0.7.1"
dotenv = "0.15.0"
pinecone-sdk = "0.1.2"
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokenizers = "0.20.0"
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
unicode-segmentation = "1.12.0"

[dev-dependencies       ]
hf-hub = "0.3.2"
serial_test = "0.10.0"
