[package]
name = "x"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
chrono = "0.4.38"
dotenv = "0.15.0"
rag = { path = "../rag" }
reqwest = "0.12.7"
serde = "1.0.210"
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
twitter-v2 = "0.1.8"
